--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: lavender;
+    background-color: #00796B;
 }
 
 .row {
@@ -13,6 +13,7 @@ body {
 
 header h2 {
     text-align: center;
+    color: #FFFFFF;
 }
 
 img {
@@ -32,4 +33,8 @@ img {
 .availability {
     background-color: gray;
     color: yellow;
+}
+
+p {
+    color: #B2DFDB;
 }
