--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
     background-color: #00796B;
-    font-family: 'Lexend Zetta', sans-serif;
+    font-family: 'Slabo 27px', serif;
 }
 
 .row {
